add page iphone index

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                             <li>
                                 <a href="/JS/Projeto QR CODE/index.html">QR Code</a>
                             </li>
+                            <li>
+                                <a href="/JS/Clone Page Vendas Iphone/index.html">Clone Page Iphone</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
