--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                             <li>
                                 <a href="/JS/Clone Page Vendas Iphone/index.html">Clone Page Iphone</a>
                             </li>
+                            <li>
+                                <a href="js/Projeto IMC/index.html">Calculo IMC</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
