--- a/JS/Projeto IMC/index.html
+++ b/JS/Projeto IMC/index.html
@@ -50,5 +50,12 @@
             </button>
         </div>
     </div>
+    <div class="fixed">
+        <span>
+            <a href="../../index.html">
+                Clique aqui para voltar ao menu principal
+            </a>
+        </span>
+    </div>
 </body>
 </html>
