criando li do ES6+ e AXIOS

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                             <li>
                                 <a href="./JS/9_Programacao_assicrona/index.html">Programação Assicrona</a>
                             </li>
+                            <li>
+                                <a href="js/11_ES6+/index.html">ES6+</a>
+                            </li>
+                            <li>
+                                <a href="js/12_AXIOS/index.html">Axios</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="introducion">
