Finalizando Lazy Loading

--- a/JS/13_Lazy/index.html
+++ b/JS/13_Lazy/index.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>JS ES6+</title>
+    <title>Lazy Loading</title>
     <link rel="shortcut icon" href="img/js.png" type="image/x-icon">
 </head>
 <body>
-    <h1>JS ES6+</h1>
+    <h1 class="title">Agricultura pelo Brasil</h1>
+    <div class="container">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1529313780224-1a12b68bed16?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="floresta1">
+            <p>agricultura 1</p>
+        </div>
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1500595046743-cd271d694d30?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="agricultura2">
+            <p>agricultura 2</p>
+        </div>
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1704613278892-0056895dd46a?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="agricultura3">
+            <p>agricultura 3</p>
+        </div>
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1522579479806-486feddb6d25?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="agricultura4">
+            <p>agricultura 4</p>
+        </div>
+        <div class="image-container">
+            <img src="https://plus.unsplash.com/premium_photo-1681910968966-2e11b92ecf7c?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="agricultura5">
+            <p>agricultura 5</p>
+        </div>
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1719846923269-6fdf75444cb8?q=80&w=10&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="agricultura6">
+            <p>agricultura 6</p>
+        </div>
+    </div>
     <!-- fixed -->
     <div class="fixed">
         <span>
