modificando index principal

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                             <li>
                                 <a href="js/Projeto IMC/index.html">Calculo IMC</a>
                             </li>
+                            <li>
+                                <a href="js/13_Lazy/index.html">Lazy Loading</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
