--- a/JS/Projeto_TodoList/index.html
+++ b/JS/Projeto_TodoList/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div id="todo-list">
-            <div class="todo done">
+            <!-- <div class="todo done">
                 <h3>Estou fazendo algo...</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
@@ -77,7 +77,7 @@
                 <button class="remove-todo">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- fixed -->
