--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                             <li>
                                 <a href="js/13_Lazy/index.html">Lazy Loading</a>
                             </li>
+                            <li>
+                                <a href="js/Projeto_TodoList/index.html">TodoList LocalStorage</a>
+                            </li>
+                            <li>
+                                <a href="js/Projeto_DevNotes/index.html">DevNotes</a>
+                            </li>
+                            <li>
+                                <a href="js/Projeto_BoxShadow/index.html">Gerador de BoxShadow</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
